working on coverage of labels
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>